--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
     <script src="https://unpkg.com/@zxing/library@0.19.1"></script>
-    <style src="style.css"></style>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <div class="navbar-top">
