--- a/index.html
+++ b/index.html
@@ -996,8 +996,17 @@
     <script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.19.1"></script>
 
     <!-- JavaScript المدمج -->
-    <script>
-        
-    </script>
+    <script src="js/constants.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/database.js"></script>
+    <script src="js/navigation.js"></script>
+    <script src="js/dashboard.js"></script>
+    <script src="js/products.js"></script>
+    <script src="js/pos.js"></script>
+    <script src="js/reports.js"></script>
+    <script src="js/suppliers.js"></script>
+    <script src="js/credit.js"></script>
+    <script src="js/sales.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
